force-app/main/default/objects/AWS_Configuration__c/AWS_Configuration__c.object-meta.xml
<CustomObject>
    <label>AWS Configuration</label>
    <nameField>
        <displayFormat>AWS-{0000}</displayFormat>
        <label>AWS Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AWS Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>