force-app/main/default/objects/AWS_Configuration__c/fields/Bucket_Name__c.field-meta.xml
<CustomField>
    <fullName>Bucket_Name__c</fullName>
    <label>Bucket Name</label>
    <type>TextArea</type>
</CustomField>